2003-11-19  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tlsexe32.d: Update for changed symbols from objdump.
	* ld-powerpc/tlsso32.d: Likewise.

2003-10-27  Stephane Carrez  <stcarrez@nerim.fr>

	* ld-undefined/undefined.exp: Mark as xfail for m6811 and m6812
	due to elf/Dwarf2 binutils limitation.

2003-10-23  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elfvers/vers.exp (test_ldfail): Add "-Wl," to pass the
	linker option from gcc.

2003-10-23  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tlsexetoc.d: Correct.
	* ld-powerpc/tlstoc.d: Correct.

2003-10-18  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-mmix/greg-14.d, ld-mmix/greg-5.d, ld-mmix/pushja1b.d,
	ld-mmix/pushja1f.d, ld-mmix/pushja7b.d, ld-mmix/pushja7f.d: Pass
	--no-pushj-stubs to the assembler.
	* ld-mmix/pushjs2b.d, ld-mmix/greg-14s.d, ld-mmix/pushjs1.d,
	ld-mmix/greg-5s.d, ld-mmix/pushjs3b.d, ld-mmix/pushja1f-s.d,
	ld-mmix/pushjs1m.d, ld-mmix/pushja7b-s.d, ld-mmix/pushja7f-s.d,
	ld-mmix/pushja1b-s.d, ld-mmix/pushjs2.d, ld-mmix/pushjs3.d,
	ld-mmix/pushjs4b.d, ld-mmix/pushjs4.d, ld-mmix/pushjs1bm.d,
	ld-mmix/pushjs1b.d, ld-mmix/pushjs2m.d, ld-mmix/pushjs1r.d,
	ld-mmix/pushjs3m.d, ld-mmix/pushjs2bm.d, ld-mmix/pushjs4m.d,
	ld-mmix/pushjs3bm.d, ld-mmix/pushjs2r.d, ld-mmix/pushjs4bm.d,
	ld-mmix/pushjs3r.d, ld-mmix/pushjs4r.d: New tests.

2003-10-15  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-sh/sh64/rd-sh64.exp: If the test matches *-dso.d, copy
	the output of linker to the file tmpdir/*-dso.so.
	* ld-sh/sh64/stobin-0-dso.d: New.
	* ld-sh/sh64/stobin-1.d: New.
	* ld-sh/sh64/stobin.s: New.
	* ld-sh/sh64/stolib.s: New.

2003-10-13  Richard Sandiford  <rsandifo@redht.com>

	* ld-mips-elf/multi-got-1.d (RELSZ): Don't include the size of the
	trailing null relocs.

2003-10-12  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-sh/rd-sh.exp (LDFLAGS): Define appropriately for each
	sh64/sh5 targets.
	* ld-sh/sh.exp: Don't do relaxing test for sh64*-*-* and
	sh5*-*-* targets.