@@ -17,7 +17,7 @@ Sections:
 Idx Name          Size      VMA       LMA       File off  Algn
   0 \.text         00000064  0+1000  0+1000  00000100  2\*\*0
                   CONTENTS, ALLOC, LOAD, READONLY, CODE
-  1 \.data         00000018  0+10e8  0+10e8  00000168  2\*\*0
+  1 \.data         00000018  0+10e8  0+10e8  00000168  2\*\*2
                   CONTENTS, ALLOC, LOAD, DATA
   2 \.ctors        00000000  0+1100  0+1100  00000184  2\*\*0
                   CONTENTS
