@@ -16,7 +16,7 @@ Sections:
 Idx Name          Size      VMA               LMA               File off  Algn
   0 \.text         000000ac  0000000000001000  0000000000001000  00000100  2\*\*0
                   CONTENTS, ALLOC, LOAD, READONLY, CODE
-  1 \.data         00000018  0000000000001130  0000000000001130  000001b0  2\*\*0
+  1 \.data         00000018  0000000000001130  0000000000001130  000001b0  2\*\*2
                   CONTENTS, ALLOC, LOAD, DATA
   2 \.ctors        00000000  0000000000001148  0000000000001148  00000204  2\*\*0
                   CONTENTS
