@@ -17,7 +17,7 @@ Sections:
 Idx Name          Size      VMA       LMA       File off  Algn
   0 \.text         00000008  0+1000  0+1000  00000100  2\*\*0
                   CONTENTS, ALLOC, LOAD, READONLY, CODE
-  1 \.rodata       0000000c  0+1008  0+1008  00000108  2\*\*0
+  1 \.rodata       0000000c  0+1008  0+1008  00000108  2\*\*2
                   CONTENTS, ALLOC, LOAD, READONLY, DATA
   2 \.data         00000000  0+1098  0+1098  00000118  2\*\*0
                   CONTENTS, ALLOC, LOAD, DATA
