@@ -9,7 +9,7 @@ Sections:
 Idx Name          Size      VMA       LMA       File off  Algn
   0 \.text         0+40  0+  0+  0+34  2\*\*0
                   CONTENTS, ALLOC, LOAD, RELOC, READONLY, CODE
-  1 \.data         0+40  0+  0+  0+74  2\*\*0
+  1 \.data         0+40  0+  0+  0+74  2\*\*2
                   CONTENTS, ALLOC, LOAD, RELOC, DATA
   2 \.bss          0+  0+  0+  0+b4  2\*\*0
                   ALLOC
