@@ -16,9 +16,9 @@ Sections:
 Idx Name          Size      VMA               LMA               File off  Algn
   0 \.text         0+204  0+1000  0+1000  0+100  2\*\*0
                   CONTENTS, ALLOC, LOAD, READONLY, CODE
-  1 \.rodata       0+144  0+1204  0+1204  0+304  2\*\*0
+  1 \.rodata       0+144  0+1204  0+1204  0+304  2\*\*2
                   CONTENTS, ALLOC, LOAD, READONLY, DATA
-  2 \.data         0+194  0+13c8  0+13c8  0+448  2\*\*0
+  2 \.data         0+194  0+13c8  0+13c8  0+448  2\*\*2
                   CONTENTS, ALLOC, LOAD, DATA
   3 \.ctors        0+  0+155c  0+155c  0+604  2\*\*0
                   CONTENTS
